Use newer Java APIs